--- a/SignUp.html
+++ b/SignUp.html
@@ -14,7 +14,8 @@
         }
         
         body {
-            background-color: #ffffff;
+            background: linear-gradient(to bottom, #FFFFFF, #DDE6ED);
+            min-height: 100vh;
         }
         
         .container {
