--- a/login.html
+++ b/login.html
@@ -14,7 +14,13 @@
         }
 
         body {
-            background-color: #ffffff;
+            background: linear-gradient(to bottom, #FFFFFF, #DDE6ED);
+            min-height: 100vh;
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow-x: hidden;
         }
         
         .container {
@@ -22,6 +28,12 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 0 15px;
+        }
+        html {
+            height: 100%;
+            width: 100%;
+            margin: 0;
+            padding: 0;
         }
         
         /* Header Styles */
