--- a/Riwayat Donasi/riwayatdonasi.html
+++ b/Riwayat Donasi/riwayatdonasi.html
@@ -1,33 +1,3 @@
-<script>
-// ...existing code...
-    // Navigasi Header
-    document.querySelectorAll(".nav-menu a").forEach(function(link) {
-        link.addEventListener("click", function(e) {
-            e.preventDefault();
-            const text = this.textContent.trim();
-
-            switch (text) {
-                case "Donasi":
-                    window.location.href = "../Kategori donasi/kategoridonasi.html";
-                    break;
-                case "Riwayat":
-                    window.location.href = "../Riwayat Donasi/riwayatdonasi.html";
-                    break;
-                case "Tentang":
-                    window.location.href = "../AboutUs/aboutus.html";
-                    break;
-                case "Aktivitas":
-                    window.location.href = "aktivitas.html";
-                    break;
-                case "Mulai Berbagi":
-                    window.location.href = "login.html";
-                    break;
-            }
-        });
-    });
-// ...existing code...
-</script>
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -63,30 +33,35 @@
             <p>Lihat semua donasi yang telah anda berikan untuk kebaikan bersama</p>
         </div>
 
-        <div class="filter-section">
-            <div class="filter-header">
-                <h3>Filter</h3>
-                <span class="filter-icon">⚙️</span>
-            </div>
-            <div class="filter-options">
-                <div class="filter-dropdown">
-                    <div class="dropdown-select">
-                        <span>Periode: Semua</span>
-                        <span>⟹</span>
-                    </div>
-                </div>
-                <div class="filter-dropdown">
-                    <div class="dropdown-select">
-                        <span>Status: Semua</span>
-                        <span>⟹</span>
-                    </div>
-                </div>
-                <div class="search-box">
-                    <input type="text" class="search-input" placeholder="Cari Donasi...">
-                    <button class="search-button">🔍</button>
-                </div>
-            </div>
-        </div>
+        <!-- FILTER -->
+<div class="filter-section" style="margin-bottom: 40px;">
+  <div class="filter-group" style="display: flex; gap: 20px; align-items: center; flex-wrap: wrap;">
+
+    <!-- Filter Periode -->
+    <div class="filter-dropdown">
+      <select class="dropdown-select">
+        <option value="semua">Periode: Semua</option>
+        <option value="hari-ini">Periode: Hari Ini</option>
+        <option value="1-bulan">Periode: 1 Bulan</option>
+      </select>
+    </div>
+
+    <!-- Filter Status -->
+    <div class="filter-dropdown">
+      <select class="dropdown-select">
+        <option value="semua">Status: Semua</option>
+        <option value="disalurkan">Status: Disalurkan</option>
+        <option value="dikirim">Status: Dikirim</option>
+      </select>
+    </div>
+
+    <!-- Search Box -->
+    <div class="search-box">
+      <input type="text" class="search-input" placeholder="Cari Donasi...">
+      <span class="search-icon">🔍</span>
+    </div>
+  </div>
+</div>
 
         <div class="stats-section">
             <div class="stat-card">
@@ -108,7 +83,7 @@
             <div class="donation-card">
                 <div class="donation-info">
                     <div class="donation-img">
-                        <img src="/api/placeholder/80/80" alt="Tumpukan Pakaian">
+                        <img src="../assets/baju.png" alt="Tumpukan baju">
                     </div>
                     <div class="donation-details">
                         <h3>Pakaian</h3>
@@ -117,11 +92,44 @@
                     </div>
                 </div>
                 <div class="donation-actions">
-                    <div class="status-badge">Diterima</div>
-                    <button class="donate-again-btn">Donasi Lagi</button>
+                    <!--<button class="donate-again-btn">Donasi Lagi</button> -->
+                    <div class="status-badge">Disalurkan</div>
+                    
                 </div>
             </div>
         </div>
     </main>
+<script>
+// Navigasi menu header
+document.querySelectorAll('.nav-menu li a').forEach(function(link) {
+    const text = link.textContent.trim().toLowerCase();
+    link.addEventListener('click', function(e) {
+        if (text === 'tentang') {
+            e.preventDefault();
+            window.location.href = '../AboutUs/aboutus.html';
+        } else if (text === 'riwayat') {
+            e.preventDefault();
+            window.location.href = '../Riwayat Donasi/riwayatdonasi.html';
+        } else if (text === 'donasi') {
+            e.preventDefault();
+            window.location.href = '../KategoriDonasi.html';
+        } else if (text === 'aktivitas') {
+            e.preventDefault();
+            window.location.href = '../aktivitas.html';
+        } else if (text === 'mulai berbagi') {
+            e.preventDefault();
+            window.location.href = '../login.html';
+        }
+    });
+});
+
+// Action tombol "Donasi Lagi"
+document.querySelectorAll('.donate-again-btn').forEach(function(btn) {
+    btn.addEventListener('click', function(e) {
+        e.preventDefault();
+        window.location.href = '../formdonasi/formdonasi.html';
+    });
+});
+</script>
 </body>
 </html>
