--- a/SignUp.html
+++ b/SignUp.html
@@ -28,6 +28,7 @@
             </ul>
         </div>
     </header>
+
     <!-- Main Content -->
     <div class="main-container">
         <div class="form-container">
@@ -36,64 +37,71 @@
                 <p>Gabung sekarang dan mulai berbagi kebaikan lewat barang-barang yang masih layak pakai</p>
             </div>
             <!-- Sign Up Form -->
-            <form class="signup-form">
-                <input type="text" class="form-input" placeholder="Nama Lengkap" required>
-                <input type="email" class="form-input" placeholder="Email" required>
-                <input type="password" class="form-input" placeholder="Kata Sandi" required>
+            <form class="signup-form" action="signup.php" method="POST">
+                <input type="text" name="username" class="form-input" placeholder="Nama Lengkap" required>
+                <input type="email" name="email" class="form-input" placeholder="Email" required>
+                <input type="password" name="password" class="form-input" placeholder="Kata Sandi" required>
                 <button type="submit" class="submit-btn">Daftar</button>
             </form>
             <div class="social-section">
-            <div class="social-separator">
-                <hr><span>lanjutkan menggunakan</span><hr>
+                <div class="social-separator">
+                    <hr><span>lanjutkan menggunakan</span><hr>
+                </div>
+                <!-- icon google dan facebook -->
+                <div class="social-login">
+                    <button class="social-btn-1">
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M18.1711 8.36788H17.4998V8.33329H9.99984V11.6666H14.7094C14.0223 13.6063 12.1761 15 9.99984 15C7.23859 15 4.99984 12.7612 4.99984 10C4.99984 7.23871 7.23859 5 9.99984 5C11.2744 5 12.4344 5.48079 13.3169 6.26625L15.6744 3.90875C14.1886 2.52079 12.1928 1.66663 9.99984 1.66663C5.39775 1.66663 1.6665 5.39788 1.6665 10C1.6665 14.6021 5.39775 18.3333 9.99984 18.3333C14.6019 18.3333 18.3332 14.6021 18.3332 10C18.3332 9.44121 18.2757 8.89583 18.1711 8.36788Z" fill="#FFC107"/>
+                            <path d="M2.62744 6.12121L5.36536 8.12913C6.10619 6.29496 7.90036 5 9.99994 5C11.2745 5 12.4345 5.48079 13.317 6.26625L15.6745 3.90875C14.1887 2.52079 12.1929 1.66663 9.99994 1.66663C6.74161 1.66663 3.91077 3.47371 2.62744 6.12121Z" fill="#FF3D00"/>
+                            <path d="M10 18.3334C12.1525 18.3334 14.1175 17.5096 15.5975 16.1709L13.0092 13.9834C12.1452 14.6409 11.0742 15.0001 10 15.0001C7.83583 15.0001 5.99667 13.6176 5.3025 11.6892L2.58667 13.7851C3.85833 16.4826 6.71583 18.3334 10 18.3334Z" fill="#4CAF50"/>
+                            <path d="M18.1711 8.36796H17.5V8.33337H10V11.6667H14.7096C14.3809 12.5902 13.7889 13.3972 13.0079 13.9839L13.0096 13.9826L15.5979 16.1701C15.4046 16.3434 18.3333 14.1667 18.3333 10.0001C18.3333 9.44129 18.2758 8.89591 18.1711 8.36796Z" fill="#1976D2"/>
+                        </svg>
+                    </button>
+                    <button class="social-btn-2">
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M20 10C20 4.47715 15.5229 0 10 0C4.47715 0 0 4.47715 0 10C0 14.9912 3.65684 19.1283 8.4375 19.8785V12.8906H5.89844V10H8.4375V7.79688C8.4375 5.29063 9.93047 3.90625 12.2146 3.90625C13.3084 3.90625 14.4531 4.10156 14.4531 4.10156V6.5625H13.1922C11.95 6.5625 11.5625 7.3334 11.5625 8.125V10H14.3359L13.8926 12.8906H11.5625V19.8785C16.3432 19.1283 20 14.9912 20 10Z" fill="#1877F2"/>
+                            <path d="M13.8926 12.8906L14.3359 10H11.5625V8.125C11.5625 7.33418 11.95 6.5625 13.1922 6.5625H14.4531V4.10156C14.4531 4.10156 13.3084 3.90625 12.2146 3.90625C9.93047 3.90625 8.4375 5.29063 8.4375 7.79688V10H5.89844V12.8906H8.4375V19.8785C9.45508 20.0405 10.5449 20.0405 11.5625 19.8785V12.8906H13.8926Z" fill="white"/>
+                        </svg>
+                    </button>
+                </div>
             </div>
-            <!-- icon google dan facebook -->
-            <div class="social-login">
-                <button class="social-btn-1">
-                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M18.1711 8.36788H17.4998V8.33329H9.99984V11.6666H14.7094C14.0223 13.6063 12.1761 15 9.99984 15C7.23859 15 4.99984 12.7612 4.99984 10C4.99984 7.23871 7.23859 5 9.99984 5C11.2744 5 12.4344 5.48079 13.3169 6.26625L15.6744 3.90875C14.1886 2.52079 12.1928 1.66663 9.99984 1.66663C5.39775 1.66663 1.6665 5.39788 1.6665 10C1.6665 14.6021 5.39775 18.3333 9.99984 18.3333C14.6019 18.3333 18.3332 14.6021 18.3332 10C18.3332 9.44121 18.2757 8.89583 18.1711 8.36788Z" fill="#FFC107"/>
-                        <path d="M2.62744 6.12121L5.36536 8.12913C6.10619 6.29496 7.90036 5 9.99994 5C11.2745 5 12.4345 5.48079 13.317 6.26625L15.6745 3.90875C14.1887 2.52079 12.1929 1.66663 9.99994 1.66663C6.74161 1.66663 3.91077 3.47371 2.62744 6.12121Z" fill="#FF3D00"/>
-                        <path d="M10 18.3334C12.1525 18.3334 14.1175 17.5096 15.5975 16.1709L13.0092 13.9834C12.1452 14.6409 11.0742 15.0001 10 15.0001C7.83583 15.0001 5.99667 13.6176 5.3025 11.6892L2.58667 13.7851C3.85833 16.4826 6.71583 18.3334 10 18.3334Z" fill="#4CAF50"/>
-                        <path d="M18.1711 8.36796H17.5V8.33337H10V11.6667H14.7096C14.3809 12.5902 13.7889 13.3972 13.0079 13.9839L13.0096 13.9826L15.5979 16.1701C15.4046 16.3434 18.3333 14.1667 18.3333 10.0001C18.3333 9.44129 18.2758 8.89591 18.1711 8.36796Z" fill="#1976D2"/>
-                    </svg>
-                </button>
-                <button class="social-btn-2">
-                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M20 10C20 4.47715 15.5229 0 10 0C4.47715 0 0 4.47715 0 10C0 14.9912 3.65684 19.1283 8.4375 19.8785V12.8906H5.89844V10H8.4375V7.79688C8.4375 5.29063 9.93047 3.90625 12.2146 3.90625C13.3084 3.90625 14.4531 4.10156 14.4531 4.10156V6.5625H13.1922C11.95 6.5625 11.5625 7.3334 11.5625 8.125V10H14.3359L13.8926 12.8906H11.5625V19.8785C16.3432 19.1283 20 14.9912 20 10Z" fill="#1877F2"/>
-                        <path d="M13.8926 12.8906L14.3359 10H11.5625V8.125C11.5625 7.33418 11.95 6.5625 13.1922 6.5625H14.4531V4.10156C14.4531 4.10156 13.3084 3.90625 12.2146 3.90625C9.93047 3.90625 8.4375 5.29063 8.4375 7.79688V10H5.89844V12.8906H8.4375V19.8785C9.45508 20.0405 10.5449 20.0405 11.5625 19.8785V12.8906H13.8926Z" fill="white"/>
-                    </svg>
-                </button>
-            </div>
-        </div>
         </div>
         <!-- image sign up-->
         <div class="image-container">
             <img src="assets/SignUp.jpg" alt="Berbagi kebaikan bersama">
         </div>
-<script>
-// Navigasi "Mulai Berbagi"
-document.querySelector('.login-register').addEventListener('click', function(e) {
-    e.preventDefault();
-    window.location.href = 'Login.html';
-});
-
-// Navigasi "Aktivitas"
-document.querySelectorAll('.nav-menu li a').forEach(function(link) {
-    if (link.textContent.trim() === 'Aktivitas') {
-        link.addEventListener('click', function(e) {
-            e.preventDefault();
-            window.location.href = 'aktivitas.html';
+    
+    <script>
+        // Navigasi menu header
+        document.querySelectorAll('.nav-menu li a').forEach(function(link) {
+            const text = link.textContent.trim().toLowerCase();
+            link.addEventListener('click', function(e) {
+                if (text === 'tentang') {
+                    e.preventDefault();
+                    window.location.href = 'AboutUs/aboutus.html';
+                } else if (text === 'riwayat') {
+                    e.preventDefault();
+                    window.location.href = 'Riwayat Donasi/riwayatdonasi.html';
+                } else if (text === 'donasi') {
+                    e.preventDefault();
+                    window.location.href = 'KategoriDonasi.html';
+                } else if (text === 'aktivitas') {
+                    e.preventDefault();
+                    window.location.href = 'aktivitas.html';
+                } else if (text === 'mulai berbagi') {
+                    e.preventDefault();
+                    window.location.href = 'login.html';
+                }
+            });
         });
-    }
-});
 
-// Action tombol "Daftar"
-document.querySelector('.signup-form').addEventListener('submit', function(e) {
-    e.preventDefault();
-    // Contoh: redirect ke Login.html setelah daftar
-    alert('Pendaftaran berhasil! Silakan login.');
-    window.location.href = 'Login.html';
-});
+        // Action tombol "Daftar"
+        document.querySelector('.signup-form').addEventListener('submit', function(e) {
+            e.preventDefault();
+        // Contoh: redirect ke Login.html setelah daftar
+        alert('Pendaftaran berhasil! Silakan login.');
+        window.location.href = 'Login.html';
+        });
 </script>
-
 </body>
 </html>
