--- a/landing.html
+++ b/landing.html
@@ -20,10 +20,10 @@
             </div>
             <!-- Navigasi -->
             <ul class="nav-menu">
-                <li><a href="#">Donasi</a></li>
-                <li><a href="#">Riwayat</a></li>
-                <li><a href="#">Tentang</a></li>
-                <li><a href="#">Aktivitas</a></li>
+                <li><a href="#Kategori donasi/kategoridonasi.html">Donasi</a></li>
+                <li><a href="#Riwayat Donasi/riwayatdonasi.html">Riwayat</a></li>
+                <li><a href="#AboutUs/aboutus.html">Tentang</a></li>
+                <li><a href="#aktivitas.html">Aktivitas</a></li>
                 <li><a href="#Login.html" class="login-register">Mulai Berbagi</a></li>
             </ul>
         </div>
@@ -75,8 +75,11 @@
     <p><em>"Rangkaian aksi nyata untuk bantu sesama yang membutuhkan"</em></p>
     <a href="#" class="btn-quote">Lihat semua</a>
 </div>
+
+    <!-- Activities Section -->
+<div class="activities-container">
     <!-- Activities Grid -->
-        <div class="activities-grid"> 
+    <div class="activities-grid">
     <!-- Activity Card 1 -->
         <div class="activity-card">
             <div class="activity-image">
@@ -108,8 +111,39 @@
             <h3 class="activity-title">Donasi Buku Pelajaran – SDN 1 Cipayung</h3>
         </div>
     </div>
-</div>
+
+    <!-- Activity Card 4 -->
+    <div class="activity-card">
+        <div class="activity-image">
+            <img src="assets/aktivitas4.jpg" alt="Donasi Seragam Sekolah - SMPN 6 Bekasi">
+        </div>
+        <div class="activity-content">
+            <h3 class="activity-title">Donasi Seragam Sekolah - SMPN 6 Bekasi</h3>
+            <p class="activity-description">
+                    Pada Januari 2025, kami menyalurkan pakaian layak pakai dan perlengkapan rumah tangga ke Komunitas Sahabat Ibu. Bantuan ini diberikan untuk mendukung para ibu yang membutuhkan di wilayah Tangerang.
+        </div>
     </div>
+
+    <!-- Activity Card 5 -->
+    <div class="activity-card">
+        <div class="activity-image">
+            <img src="assets/aktivitas5.jpg" alt="Donasi Alat Tulis - Panti Asuhan Kalijaga">
+        </div>
+        <div class="activity-content">
+            <h3 class="activity-title">Donasi Alat Tulis - Panti Asuhan Kalijaga</h3>
+        </div>
+    </div>
+    <!-- Activity Card 6 -->
+    <div class="activity-card">
+        <div class="activity-image">
+            <img src="assets/aktivitas6.jpg" alt="Donasi Mainan Anak - Posyandu Ceria">
+        </div>
+        <div class="activity-content">
+            <h3 class="activity-title">Donasi Mainan Anak - Posyandu Ceria</h3>
+        </div>
+    </div>
+    </div>
+</div>
 
 
     <!-- Kata Motivasi -->
@@ -159,5 +193,102 @@
         </div>
     </div>
 </footer>
+
+<script>
+// Navigasi header
+document.querySelectorAll('.nav-menu li a').forEach(function(link) {
+    const text = link.textContent.trim().toLowerCase();
+    link.addEventListener('click', function(e) {
+        if (text === 'tentang') {
+            e.preventDefault();
+            window.location.href = 'AboutUs/aboutus.html';
+        } else if (text === 'riwayat') {
+            e.preventDefault();
+            window.location.href = 'Riwayat Donasi/riwayatdonasi.html';
+        } else if (text === 'mulai berbagi') {
+            e.preventDefault();
+            window.location.href = 'login.html';
+        } else if (text === 'aktivitas') {
+            e.preventDefault();
+            window.location.href = 'aktivitas.html';
+        } else if (text === 'donasi') {
+            e.preventDefault();
+            window.location.href = 'KategoriDonasi.html';
+        }
+    });
+});
+
+// Tombol "Tentang Kami" di About Us Section
+const btnAbout = document.querySelector('.about-text .btn-about');
+if (btnAbout) {
+    btnAbout.addEventListener('click', function(e) {
+        e.preventDefault();
+        window.location.href = 'AboutUs/aboutus.html';
+    });
+}
+
+// Navigasi footer
+document.querySelectorAll('.footer-column ul li a').forEach(function(link) {
+    const text = link.textContent.trim().toLowerCase();
+    link.addEventListener('click', function(e) {
+        if (text === 'beranda') {
+            e.preventDefault();
+            window.location.href = 'Landing.html';
+        } else if (text === 'donasikan barang' || text === 'donasi') {
+            e.preventDefault();
+            window.location.href = 'KategoriDonasi.html';
+        } else if (text === 'riwayat donasi') {
+            e.preventDefault();
+            window.location.href = 'Riwayat Donasi/riwayatdonasi.html';
+        } else if (text === 'tentang kami') {
+            e.preventDefault();
+            window.location.href = 'AboutUs/aboutus.html';
+        } else if (text === 'aktivitas terbaru') {
+            e.preventDefault();
+            window.location.href = 'aktivitas.html';
+        }
+    });
+});
+
+// Tombol "Lihat semua" aktivitas
+const btnQuote = document.querySelector('.btn-quote');
+if (btnQuote) {
+    btnQuote.addEventListener('click', function(e) {
+        e.preventDefault();
+        window.location.href = 'aktivitas.html';
+    });
+}
+
+// Tombol "Donasikan Sekarang"
+const btnDonasi = document.querySelector('.btn-primary');
+if (btnDonasi) {
+    btnDonasi.addEventListener('click', function(e) {
+        e.preventDefault();
+        window.location.href = 'KategoriDonasi.html';
+    });
+}
+
+// Tombol "Riwayat Donasi"
+const btnRiwayat = document.querySelector('.btn-secondary');
+if (btnRiwayat) {
+    btnRiwayat.addEventListener('click', function(e) {
+        e.preventDefault();
+        window.location.href = 'Riwayat Donasi/riwayatdonasi.html';
+    });
+}
+
+
+    
+  window.addEventListener('scroll', () => {
+    const header = document.querySelector('header');
+    if (window.scrollY > 50) {
+      header.classList.add('scrolled');
+    } else {
+      header.classList.remove('scrolled');
+    }
+  });
+
+
+</script>
 </body>
 </html>
