--- a/landing2.html
+++ b/landing2.html
@@ -3,48 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aktivitas Kami - SumbangYuk</title>
+    <title>SumbangYuk - Berbagi Barang Berbagi Harapan</title>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="styleAktivitas.css">
+    <link rel="stylesheet" href="styleLanding2.css">
 </head>
 <body>
     <!-- Header -->
     <header>
-        <div class="container header-container">
-            <div class="logo">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M21 4H3C1.89543 4 1 4.89543 1 6V18C1 19.1046 1.89543 20 3 20H21C22.1046 20 23 19.1046 23 18V6C23 4.89543 22.1046 4 21 4Z" stroke="#333333" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                <span class="logo-text">SumbangYuk</span>
-            </div>
-            <ul class="nav-menu">
-                <li><a href="#">Donasi</a></li>
-                <li><a href="#">Riwayat</a></li>
-                <li><a href="#">Tentang</a></li>
-                <li><a href="#">Aktivitas</a></li>
-                <li><a href="#Login.html" class="login-register">Mulai Berbagi</a></li>
-            </ul>
+    <div class="container header-container">
+        <div class="logo">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M21 4H3C1.89543 4 1 4.89543 1 6V18C1 19.1046 1.89543 20 3 20H21C22.1046 20 23 19.1046 23 18V6C23 4.89543 22.1046 4 21 4Z" stroke="#333333" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            <span class="logo-text">SumbangYuk</span>
+        </div>
+        <ul class="nav-menu">
+            <li><a href="Kategori Donasi/kategoridonasi.html">Donasi</a></li>
+            <li><a href="Riwayat Donasi/riwayatdonasi.html">Riwayat</a></li>
+            <li><a href="AboutUs/aboutus.html">Tentang</a></li>
+            <li><a href="aktivitas.html">Aktivitas</a></li>
+        </ul>
+        <div class="kontak">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user">
+                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                <circle cx="12" cy="7" r="4"></circle>
+            </svg>
+        </div>
         </div>
     </header>
 
-    <!-- Main Content -->
-     <div class="main-container">
+    <!-- Hero Section -->
+<div class="hero">
+        <div class="hero-content">
+            <h1>Berbagi Barang<br>Berbagi Harapan</h1>
+            <div class="hero-buttons">
+                <a href="#" class="btn-primary">Donasikan Sekarang</a>
+                <a href="#" class="btn-secondary">Riwayat Donasi</a>
+            </div>
+        </div>
+        <div class="hero-stats">
+            <div class="stat"><strong>250rb</strong><br>Barang Tersalurkan</div>
+            <div class="stat"><strong>10rb</strong><br>Donatur Terdaftar</div>
+            <div class="stat"><strong>500+</strong><br>Jumlah Penerima</div>
+            <div class="stat"><strong>30+</strong><br>Kabupaten/Kota</div>
+        </div>
+    </div>
+
+    <!-- About Us Section -->
+    <section class="about-section container">
+        <div class="section-header">
+            <h2>About Us</h2>
+        </div>
+        <div class="about-content">
+            <div class="about-image">
+                <img src="assets/Landing2.jpg" alt="Volunteers working together">
+            </div>
+            <div class="about-text">
+                <div class="about-title">Tentang</div>
+                <h3 class="about-subtitle">Menyalurkan Barang<br>Menebar Manfaat</h3>
+                <p>SumbangYuk adalah platform donasi barang layak pakai yang memudahkan masyarakat untuk berbagi. 
+                    Kami percaya, barang yang tak terpakai masih bisa memberi manfaat jika disalurkan dengan tepat 
+                    melalui kolaborasi bersama komunitas.</p>
+                <a href="#" class="btn-about">Tentang Kami</a>
+            </div>
+        </div>
+    </section>
+    <!-- Activitas kami -->
+     <div class="aktivitass">
         <div class="aktivitas-main">
             <h1>Aktivitas Kami</h1>
      </div>
 
-     <!-- Search box -->
-        <div class="search-box">
-            <input type="text" class="search-input" placeholder="Cari Donasi..." />
-            <span class="search-icon">
-                <svg width="16" height="16" fill="none" stroke="#000" stroke-width="2" viewBox="0 0 24 24">
-                    <circle cx="11" cy="11" r="8"></circle>
-                    <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-                </svg>
-            </span>
-        </div>
-    
+    <div class="aktivitas-quote">
+    <p><em>"Rangkaian aksi nyata untuk bantu sesama yang membutuhkan"</em></p>
+    <a href="#" class="btn-quote">Lihat semua</a>
+</div>
     <!-- Activities Section -->
 <div class="activities-container">
     <!-- Activities Grid -->
@@ -114,22 +148,12 @@
     </div>
 </div>
 
-    <!-- Ajakan Donasi Section -->
-    <section class="donation-invite">
-        <h2 class="invite-title">Tertarik Untuk Berdonasi?</h2>
-            <p class="invite-subtitle">Yuk mulai sumbangkan barangmu atau jadi bagian dari aksi kami</p>
-        <div class="invite-buttons">
-            <a href="#" class="btn-primary">Donasikan Sekarang</a>
-            <a href="#" class="btn-secondary">Riwayat Donasi</a>
-        </div>
-    </section>
-
     <!-- Kata Motivasi -->
 <div class="footer-quote">
     <p><em>"Bukan seberapa banyak yang kita berikan, tetapi seberapa besar cinta yang kita tanamkan dalam pemberian itu"</em></p>
 </div>
 
-<!-- Footer  -->
+    <!-- Footer  -->
 <footer class="site-footer">
     <div class="footer-container">
         <!-- Logo & Social Media -->
@@ -173,28 +197,34 @@
 </footer>
 
 <script>
-    // Navigasi menu header
+// Navigasi header
 document.querySelectorAll('.nav-menu li a').forEach(function(link) {
     const text = link.textContent.trim().toLowerCase();
     link.addEventListener('click', function(e) {
         if (text === 'tentang') {
             e.preventDefault();
-            window.location.href = 'AboutUs/aboutus.html';
+            window.location.href = 'Tentang.html';
         } else if (text === 'riwayat') {
             e.preventDefault();
-            window.location.href = 'Riwayat Donasi/riwayatdonasi.html';
-        } else if (text === 'donasi') {
-            e.preventDefault();
-            window.location.href = 'KategoriDonasi.html';
+            window.location.href = 'Riwayat.html';
         } else if (text === 'aktivitas') {
             e.preventDefault();
-            window.location.href = 'aktivitas.html';
-        } else if (text === 'mulai berbagi') {
+            window.location.href = 'Aktivitas2.html';
+        } else if (text === 'donasi') {
             e.preventDefault();
-            window.location.href = 'login.html';
+            window.location.href = 'Kategori donasi/kategoridonasi.html';
         }
     });
 });
+
+// Tombol "Tentang Kami" di About Us Section
+const btnAbout = document.querySelector('.about-text .btn-about');
+if (btnAbout) {
+    btnAbout.addEventListener('click', function(e) {
+        e.preventDefault();
+        window.location.href = 'Tentang.html';
+    });
+}
 
 // Navigasi footer
 document.querySelectorAll('.footer-column ul li a').forEach(function(link) {
@@ -202,34 +232,62 @@ document.querySelectorAll('.footer-column ul li a').forEach(function(link) {
     link.addEventListener('click', function(e) {
         if (text === 'beranda') {
             e.preventDefault();
-            window.location.href = 'Landing.html';
+            window.location.href = 'Landing2.html';
         } else if (text === 'donasikan barang' || text === 'donasi') {
             e.preventDefault();
-            window.location.href = 'KategoriDonasi.html';
+            window.location.href = 'Kategori donasi/kategoridonasi.html';
         } else if (text === 'riwayat donasi') {
             e.preventDefault();
-            window.location.href = 'Riwayat Donasi/riwayatdonasi.html';
+            window.location.href = 'Riwayat.html';
         } else if (text === 'tentang kami') {
             e.preventDefault();
-            window.location.href = 'AboutUs/aboutus.html';
+            window.location.href = 'Tentang.html';
         } else if (text === 'aktivitas terbaru') {
             e.preventDefault();
-            window.location.href = 'aktivitas.html';
+            window.location.href = 'Aktivitas2.html';
         }
     });
 });
 
-// Action tombol "Donasikan Sekarang"
-document.querySelector('.btn-primary').addEventListener('click', function(e) {
-    e.preventDefault();
-    window.location.href = 'KategoriDonasi.html';
-});
+// Tombol "Lihat semua" aktivitas
+const btnQuote = document.querySelector('.btn-quote');
+if (btnQuote) {
+    btnQuote.addEventListener('click', function(e) {
+        e.preventDefault();
+        window.location.href = 'Aktivitas2.html';
+    });
+}
 
-// Action tombol "Riwayat Donasi"
-document.querySelector('.btn-secondary').addEventListener('click', function(e) {
-    e.preventDefault();
-    window.location.href = 'Riwayat Donasi/riwayatdonasi.html';
-});
+// Tombol "Donasikan Sekarang"
+const btnDonasi = document.querySelector('.btn-primary');
+if (btnDonasi) {
+    btnDonasi.addEventListener('click', function(e) {
+        e.preventDefault();
+        window.location.href = 'Kategori donasi/kategoridonasi.html';
+    });
+}
+
+// Tombol "Riwayat Donasi"
+const btnRiwayat = document.querySelector('.btn-secondary');
+if (btnRiwayat) {
+    btnRiwayat.addEventListener('click', function(e) {
+        e.preventDefault();
+        window.location.href = 'Riwayat.html';
+    });
+}
+
+
+    
+  window.addEventListener('scroll', () => {
+    const header = document.querySelector('header');
+    if (window.scrollY > 50) {
+      header.classList.add('scrolled');
+    } else {
+      header.classList.remove('scrolled');
+    }
+  });
+
+
 </script>
 </body>
 </html>
