Update: ganti landing menjadi index.html

--- a/aktivitas.html
+++ b/aktivitas.html
@@ -202,7 +202,7 @@ document.querySelectorAll('.footer-column ul li a').forEach(function(link) {
     link.addEventListener('click', function(e) {
         if (text === 'beranda') {
             e.preventDefault();
-            window.location.href = 'Landing.html';
+            window.location.href = 'index.html';
         } else if (text === 'donasikan barang' || text === 'donasi') {
             e.preventDefault();
             window.location.href = 'KategoriDonasi.html';
