--- a/AboutUs/aboutus.html
+++ b/AboutUs/aboutus.html
@@ -259,7 +259,7 @@
             link.addEventListener('click', function(e) {
                 if (text === 'beranda') {
                     e.preventDefault();
-                    window.location.href = '../Landing.html';
+                    window.location.href = '../index.html';
                 } else if (text === 'donasikan barang' || text === 'donasi') {
                     e.preventDefault();
                     window.location.href = '../KategoriDonasi.html';
